@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.14...]
+### 2020-06-26
+	Fixed: Smart path didn't format non-filtered paths correctly due to peculiarity of System.IO.Path.Combine.
 ### 2020-06-12
 	Fixed: Volume adjustments now properly format path as per watchlist rules in all circumstances.
 	Fixed: Error when manual control is used in power manager.
